hphp/hack/test/typecheck/typedef2.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the "hack" directory of this source tree.
 *
 *
 */

interface A {}

type MyTypedef = A;

class X implements MyTypedef {
}
